@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--suppress MavenModelInspection, MavenModelInspection, MavenModelInspection -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.gruelbox</groupId>
   <artifactId>transactionoutbox-parent</artifactId>
@@ -17,8 +16,8 @@
   </organization>
   <properties>
     <!-- Core -->
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
     <file.encoding>UTF-8</file.encoding>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -27,12 +26,14 @@
     <test.dir>src/test/java</test.dir>
     <skip.format>false</skip.format>
     <!-- Dependency versions -->
-    <logback.version>1.5.26</logback.version>
+    <logback.version>1.5.27</logback.version>
+    <lombok.version>1.18.42</lombok.version>
     <revision>6.1.653</revision>
-    <junit.jupiter.version>5.12.2</junit.jupiter.version>
+    <junit.jupiter.version>6.0.2</junit.jupiter.version>
     <testcontainers.version>1.21.4</testcontainers.version>
     <maven.source.plugin.version>3.4.0</maven.source.plugin.version>
     <maven.gpg.plugin.version>3.2.8</maven.gpg.plugin.version>
+    <surefire.version>3.5.3</surefire.version>
   </properties>
   <modules>
     <module>transactionoutbox-core</module>
@@ -40,6 +41,8 @@
     <module>transactionoutbox-guice</module>
     <module>transactionoutbox-testing</module>
     <module>transactionoutbox-acceptance</module>
+    <module>transactionoutbox-quarkus</module>
+    <module>transactionoutbox-spring</module>
   </modules>
   <dependencyManagement>
     <dependencies>
@@ -51,7 +54,7 @@
       <dependency>
         <groupId>net.bytebuddy</groupId>
         <artifactId>byte-buddy</artifactId>
-        <version>1.18.1</version>
+        <version>1.18.2</version>
         <optional>true</optional>
       </dependency>
       <dependency>
@@ -68,7 +71,7 @@
       <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
-        <version>1.18.30</version>
+        <version>${lombok.version}</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
@@ -158,7 +161,7 @@
       <dependency>
         <groupId>com.mysql</groupId>
         <artifactId>mysql-connector-j</artifactId>
-        <version>9.5.0</version>
+        <version>9.6.0</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -197,10 +200,29 @@
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.14.1</version>
+        <version>3.15.0</version>
         <configuration>
           <source>${maven.compiler.source}</source>
           <target>${maven.compiler.target}</target>
+          <fork>true</fork>
+          <annotationProcessorPaths>
+            <path>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok</artifactId>
+              <version>${lombok.version}</version>
+            </path>
+          </annotationProcessorPaths>
+          <compilerArgs>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
       <plugin>
@@ -210,10 +232,17 @@
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.5.4</version>
+        <version>${surefire.version}</version>
         <configuration>
           <argLine>-Doracle.jdbc.javaNetNio=false -XX:+EnableDynamicAgentLoading</argLine>
         </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>org.apache.maven.surefire</groupId>
+            <artifactId>surefire-extensions-api</artifactId>
+            <version>${surefire.version}</version>
+          </dependency>
+        </dependencies>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -277,7 +306,7 @@
               <dependency>
                 <groupId>me.fabriciorby</groupId>
                 <artifactId>maven-surefire-junit5-tree-reporter</artifactId>
-                <version>1.4.0</version>
+                <version>1.5.1</version>
               </dependency>
             </dependencies>
             <configuration>
@@ -285,22 +314,11 @@
               <consoleOutputReporter>
                 <disable>true</disable>
               </consoleOutputReporter>
-              <statelessTestsetInfoReporter
-                  implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoTreeReporterUnicode"/>
+              <statelessTestsetInfoReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoTreeReporterUnicode"/>
             </configuration>
           </plugin>
         </plugins>
       </build>
-    </profile>
-    <profile>
-      <id>java-17-modules</id>
-      <activation>
-        <jdk>[17,)</jdk>
-      </activation>
-      <modules>
-        <module>transactionoutbox-quarkus</module>
-        <module>transactionoutbox-spring</module>
-      </modules>
     </profile>
     <profile>
       <id>java-21-modules</id>
@@ -309,6 +327,14 @@
       </activation>
       <modules>
         <module>transactionoutbox-jooq</module>
+      </modules>
+    </profile>
+    <profile>
+      <id>java-25-modules</id>
+      <activation>
+        <jdk>[25,)</jdk>
+      </activation>
+      <modules>
         <module>transactionoutbox-virtthreads</module>
       </modules>
     </profile>
@@ -400,7 +426,7 @@
               <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
-                <version>1.18.30</version>
+                <version>${lombok.version}</version>
               </dependency>
             </dependencies>
             <executions>
